# stratrack

./: .gitignore  AGENTS.md  README.md
.github/workflows/: main_stratrack-dev-func.yml  main_stratrack-dev-web.yml  publish-mql-interpreter.yml
api/: README.md  stratrack-backend.sln
api/Stratrack.Api.Tests/: DataChunkFunctionsTests.cs  DataChunkRangeQueryTests.cs  DataHistoryFunctionsTests.cs  DataSourceFunctionsTests.cs  DataStreamFunctionsTests.cs  DictionaryExtension.cs  DukascopyClientTests.cs  DukascopyFetchServiceTests.cs  DukascopyJobFunctionsTests.cs  FailingCommandBus.cs  HelloFunctionTests.cs  HttpResponseDataExtension.cs  MaintenanceFunctionsTests.cs  ModelDeserializationTests.cs  StrategyFunctionTests.cs  StrategyFunctionsTests.cs  Stratrack.Api.Tests.csproj  TickDataFunctionsTests.cs
backend/: .flake8  .gitignore  README.md  openapi.yaml  pyproject.toml
backend/app/: main.py  models.py
backend/app/db/: init_db.py  session.py
backend/app/features/backtesting/: crud.py  main.py  models.py  schemas.py
backend/app/features/blobs/: crud.py  main.py  models.py  routes.py
backend/app/features/datasources/: crud.py  main.py  models.py  routes.py  schemas.py
backend/app/features/strategies/: crud.py  logic.py  models.py  schemas.py
backend/app/services/: data_streamer.py  storage.py
backend/app/services/backtesting/: crud.py  models.py  routes.py  schemas.py
backend/app/services/datasources/: crud.py  routes.py  schemas.py
backend/app/services/strategies/: logic.py  main.py  models.py  routes.py  schemas.py
backend/app/workers/: backtest_executor.py  backtrader_runner.py  task_queue.py  worker_process.py
backend/tests/: test_main.py
backend/tests/features/datasources/: test_base.py  test_routes.py
backend/tests/features/strrategies/: test_crud.py
backend/tests/test_datasources/: test_routes.py
backend/tests/test_services/test_datasources/: test_routes.py
backend/tests/test_services/test_strategies/: test_crud.py
backend/tests/test_strategies/: test_crud.py
backtesting/: DonchianChannelStrategy.py
docs/: 0.policy.md  1.desining-strategy.md  2.strategy-templates.md  3.backend.md  4.datasource-management.md  5.indexeddb-backend-flow.md
frontend/: TODO.md  package-lock.json  package.json  vite.config.ts
infrastructure/: README.md  dev.bicepparam  main.bicep
(+928 files in other folders)
