[project]
name = "stratrack-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuto Nagano",email = "chamelion@hotmail.co.jp"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic[dotenv] (>=2.11.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [
  { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.6"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
strict = true
